# edl

./: .gitignore  CMakeLists.txt  Doxyfile  README.markdown
examples/: CMakeLists.txt
examples/api/: CMakeLists.txt  api.c
examples/math/: CMakeLists.txt  math.c
examples/math-api/: CMakeLists.txt  math-api.c
include/: edl.h
include/edl/: api.h  function.h  library.h  object.h  status.h
include/edl/api/: function.h  object.h
include/edl/platform/: specifics.h
platform-specific/linux/: build-instructions.cmake
platform-specific/linux/source/edl/platform/: specifics.c
source/: edl.c
source/edl/: api.c  library.c  status.c
